# llm-prompt-injection-detector

./: .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/pages/: overview.py  pattern_analysis.py  recent_detections.py
data/: README.md  download_data.py
ml/: evaluate.py  train.py
src/detector/: __init__.py  app.py  config.py  models.py  router.py
src/detector/engine/: base.py  ensemble.py  heuristic_detector.py  ml_detector.py  regex_detector.py
src/detector/logging_/: schemas.py  structured_logger.py
src/detector/patterns/: categories.py  injection_patterns.py
src/detector/storage/: sqlite_store.py
tests/integration/: test_end_to_end.py
tests/unit/: test_api.py  test_ensemble.py  test_heuristic_detector.py  test_regex_detector.py
