[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-injection-detector"
version = "0.1.0"
description = "Multi-layered LLM prompt injection detection API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pandas>=2.1.0",
    "datasets>=2.14.0",
]
dashboard = [
    "streamlit>=1.29.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.2.0",
]
all = [
    "prompt-injection-detector[ml,dashboard,dev]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
